src/test/deca/context/valid/intermediaire2/arithmetiques/02print.deca
// Description:
//    Programme minimaliste affichant le résultat d'une addtion entre deux chiffres et entre deux variables.
//
// Resultats:
//    02print.lis
//
// Historique:
//    cree le 08/06/2022

{
    int x = 1;
    int y = 1;
    println(1 + 1);
    println(x + y);
}